# search-api

./: .dockerignore  .env.example  .gitignore  API_REFERENCE.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py
app/api/: deps.py  middleware.py
app/api/routes/: answer.py  crawl.py  health.py  jobs.py  research.py  search.py
app/core/: cache.py
app/core/crawl/: crawler.py
app/core/llm/: client.py  tokens.py
app/core/research/: engine.py  prompts.py  schemas.py
app/core/search/: searxng.py
app/jobs/: manager.py
app/models/: answer.py  crawl.py  jobs.py  research.py  search.py
app/services/: answer.py
searxng/: settings.yml
tests/: test_answer.py  test_cache.py  test_crawl.py  test_hardening.py  test_health.py  test_jobs.py  test_research.py  test_search.py
